// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GhostPropertiesPanel renders 1`] = `
<div
  className="m-ghost-properties-panel"
>
  <div
    className="m-properties-panel__header"
  >
    <div
      className="m-properties-panel__label"
    >
      <svg
        style={
          Object {
            "height": 64,
            "width": 64,
          }
        }
        viewBox="-32 -20 64 64"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--large ghost"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={24}
            rx={12}
            ry={12}
            width={64}
            x={-32}
            y={19}
          />
          <text
            className="m-vehicle-icon__label m-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={31}
          >
            0123
          </text>
          <g
            transform="scale(0.7) translate(-24,-23)"
          >
            <path
              className="m-vehicle-icon__ghost-highlight"
              d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
              stroke-join="round"
            />
            <path
              className="m-vehicle-icon__ghost-body"
              d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
              stroke-join="round"
            />
          </g>
          <text
            className="m-vehicle-icon__variant"
            dominantBaseline="alphabetic"
            textAnchor="middle"
            x={0}
            y={8}
          >
            X
          </text>
        </g>
      </svg>
    </div>
    <div
      className="m-properties-panel__variant"
    >
      <div
        className="m-properties-panel__inbound-outbound"
      >
        Outbound
      </div>
      <div
        className="m-route-variant-name"
      >
        <span
          className="m-route-variant-name__route-id"
        >
          39_X
        </span>
         headsign
      </div>
    </div>
    <button
      className="m-close-button"
      onClick={[Function]}
    >
      <span
        className=""
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
    </button>
  </div>
  <div
    className="m-properties-list"
  >
    <table
      className="m-properties-list__table"
    >
      <tbody>
        <tr
          className="m-properties-list__property "
        >
          <td
            className="m-properties-list__property-label"
          >
            Run
          </td>
          <td
            className="m-properties-list__property-value"
          >
            123-0123
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`GhostPropertiesPanel renders ghost with block waivers 1`] = `
<div
  className="m-ghost-properties-panel"
>
  <div
    className="m-properties-panel__header"
  >
    <div
      className="m-properties-panel__label"
    >
      <svg
        style={
          Object {
            "height": 64,
            "width": 64,
          }
        }
        viewBox="-32 -20 64 64"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--large ghost"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={24}
            rx={12}
            ry={12}
            width={64}
            x={-32}
            y={19}
          />
          <text
            className="m-vehicle-icon__label m-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={31}
          >
            0123
          </text>
          <g
            transform="scale(0.7) translate(-24,-23)"
          >
            <path
              className="m-vehicle-icon__ghost-highlight"
              d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
              stroke-join="round"
            />
            <path
              className="m-vehicle-icon__ghost-body"
              d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
              stroke-join="round"
            />
          </g>
          <text
            className="m-vehicle-icon__variant"
            dominantBaseline="alphabetic"
            textAnchor="middle"
            x={0}
            y={8}
          >
            X
          </text>
        </g>
      </svg>
    </div>
    <div
      className="m-properties-panel__variant"
    >
      <div
        className="m-properties-panel__inbound-outbound"
      >
        
      </div>
      <div
        className="m-route-variant-name"
      >
        <span
          className="m-route-variant-name__route-id"
        >
          39_X
        </span>
         headsign
      </div>
    </div>
    <button
      className="m-close-button"
      onClick={[Function]}
    >
      <span
        className=""
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
    </button>
  </div>
  <div
    className="m-block-waiver-list"
  >
    <div
      className="m-block-waiver-banner m-block-waiver-banner--past"
    >
      <div
        className="m-block-waiver-banner__header"
      >
        <span
          className="m-block-waiver-banner__alert-icon"
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
        <div
          className="m-block-waiver-banner__title"
        >
          Dispatcher Note - 
          Past
        </div>
      </div>
      <table
        className="m-block-waiver-banner__details"
      >
        <tbody>
          <tr>
            <td
              className="m-block-waiver-banner__detail-label"
            >
              Reason
            </td>
            <td
              className="m-block-waiver-banner__detail-value"
            >
              E:1106
            </td>
          </tr>
          <tr>
            <td
              className="m-block-waiver-banner__detail-label m-block-waiver-banner__detail-label--start-time"
            >
              Start Time
            </td>
            <td
              className="m-block-waiver-banner__detail-value m-block-waiver-banner__detail-value--start-time"
            >
              5:05am
            </td>
          </tr>
          <tr>
            <td
              className="m-block-waiver-banner__detail-label m-block-waiver-banner__detail-label--end-time"
            >
              End Time
            </td>
            <td
              className="m-block-waiver-banner__detail-value m-block-waiver-banner__detail-value--end-time"
            >
              12:38pm
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    className="m-properties-list"
  >
    <table
      className="m-properties-list__table"
    >
      <tbody>
        <tr
          className="m-properties-list__property "
        >
          <td
            className="m-properties-list__property-label"
          >
            Run
          </td>
          <td
            className="m-properties-list__property-value"
          >
            123-0123
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`GhostPropertiesPanel renders ghost with missing run 1`] = `
<div
  className="m-ghost-properties-panel"
>
  <div
    className="m-properties-panel__header"
  >
    <div
      className="m-properties-panel__label"
    >
      <svg
        style={
          Object {
            "height": 64,
            "width": 64,
          }
        }
        viewBox="-32 -20 64 64"
      >
        <g
          className="m-vehicle-icon m-vehicle-icon--large ghost"
        >
          <rect
            className="m-vehicle-icon__label-background"
            height={24}
            rx={12}
            ry={12}
            width={64}
            x={-32}
            y={19}
          />
          <text
            className="m-vehicle-icon__label m-vehicle-icon__label--normal"
            dominantBaseline="central"
            textAnchor="middle"
            x="0"
            y={31}
          >
            N/A
          </text>
          <g
            transform="scale(0.7) translate(-24,-23)"
          >
            <path
              className="m-vehicle-icon__ghost-highlight"
              d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
              stroke-join="round"
            />
            <path
              className="m-vehicle-icon__ghost-body"
              d="m43.79 19c0-9.68-8.79-17.49-19.59-17.49s-19.6 7.81-19.6 17.49v12.88 11a2 2 0 0 0 2.55 1.87l6.78-4.09 10.27 5.92 10.26-5.88 6.78 4.09a2 2 0 0 0 2.55-1.87z"
              stroke-join="round"
            />
          </g>
          <text
            className="m-vehicle-icon__variant"
            dominantBaseline="alphabetic"
            textAnchor="middle"
            x={0}
            y={8}
          >
            X
          </text>
        </g>
      </svg>
    </div>
    <div
      className="m-properties-panel__variant"
    >
      <div
        className="m-properties-panel__inbound-outbound"
      >
        Outbound
      </div>
      <div
        className="m-route-variant-name"
      >
        <span
          className="m-route-variant-name__route-id"
        >
          39_X
        </span>
         headsign
      </div>
    </div>
    <button
      className="m-close-button"
      onClick={[Function]}
    >
      <span
        className=""
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
    </button>
  </div>
  <div
    className="m-properties-list"
  >
    <table
      className="m-properties-list__table"
    >
      <tbody>
        <tr
          className="m-properties-list__property "
        >
          <td
            className="m-properties-list__property-label"
          >
            Run
          </td>
          <td
            className="m-properties-list__property-value"
          >
            Not Available
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
